# ace

./: .eslintrc.json  .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  open_projects.rs
src-tauri/src/commands/: projects.rs
src/atoms/: projects.ts
src/components/: App.tsx  CreateProject.tsx
src/renderer/: ApplicationFrame.tsx  Notifications.tsx
src/renderer/Pages/: AceConfigurationPanel.tsx  PanelCanvas.tsx  createproject.tsx
src/renderer/Pages/Canvas/: InstrumentFrameElement.tsx
src/renderer/Pages/Canvas/CockpitPanel/: CockpitPanelElement.tsx
src/renderer/Pages/Home/: index.tsx
src/renderer/Pages/ProjectHome/: ProjectWorkspace.tsx  ProjectWorkspaceContainer.tsx  QueuedDataWriter.ts  WorkspaceContext.ts
src/renderer/Pages/ProjectHome/Components/: CanvasContextMenu.tsx  CoherentMenu.tsx  InteractionToolbar.tsx  Timeline.tsx
src/renderer/Pages/ProjectHome/Components/Framework/: MenuBoxes.tsx  Toolbars.tsx
src/renderer/Pages/ProjectHome/Components/SimVars/Controls/: SimVarControlEditMenu.tsx  SimVarControlElement.tsx  SimVarControlsMenu.tsx
src/renderer/Pages/ProjectHome/Components/SimVars/Presets/: SimVarPresetElement.tsx  SimVarPresetsMenu.tsx
src/renderer/Pages/ProjectHome/Store/actions/: projectData.actions.ts
src/renderer/Pages/ProjectHome/Store/reducers/: projectData.reducer.ts
src/renderer/Project/fs/: AceConfigHandler.ts  Canvas.ts  GenericProjectConfigHandler.ts  GenericProjectListConfigHandler.ts
src/renderer/shims/: LocalShim.ts  units.ts
src/types/: bindings.ts
